RESOLVED FIXED180799
2.19.3 ACCELERATED_2D_CANVAS support is broken
https://bugs.webkit.org/show_bug.cgi?id=180799
Summary 2.19.3 ACCELERATED_2D_CANVAS support is broken
Cynede
Reported 2017-12-14 00:59:11 PST
build error: Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:2007:32: error: ‘canvas’ was not declared in this scope RenderBox* renderBox = canvas().renderBox();
Attachments
Speculative fix (2.37 KB, patch)
2017-12-14 04:01 PST, Tomas Popela
no flags
Tomas Popela
Comment 1 2017-12-14 04:01:53 PST
Created attachment 329344 [details] Speculative fix Speculative fix (cairo-gl was from from Fedora 27 so I don't have a way to test this). Can you please test it?
fosero
Comment 2 2017-12-14 06:32:22 PST
Experienced the same issue, patch in comment #1 worked for me.
WebKit Commit Bot
Comment 3 2018-01-15 13:24:59 PST
Comment on attachment 329344 [details] Speculative fix Clearing flags on attachment: 329344 Committed r226955: <https://trac.webkit.org/changeset/226955>
WebKit Commit Bot
Comment 4 2018-01-15 13:25:00 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-01-15 13:25:24 PST
Note You need to log in before you can comment on or make changes to this bug.