2.19.3 ACCELERATED_2D_CANVAS support is broken https://bugs.webkit.org/show_bug.cgi?id=180799

Reviewed by Michael Catanzaro.

* html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::didDraw):


Canonical link: https://commits.webkit.org/197507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226955 268f45cc-cd09-0410-ab3c-d52691b4dbfc